<resources>
    <string name="app_name">VNA LIB</string>
    <string name="ok">Đồng ý</string>
    <string name="cancel">Hủy</string>
    <string name="no_connection">Không có kết nối mạng !</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_home">Trang chủ</string>
    <string name="tab_category">Danh mục</string>
    <string name="tab_search">Tìm kiếm</string>
    <string name="tab_favorite">Mục yêu thích</string>
    <string name="search_hint">Nhập nội dung cần tìm...</string>
    <string name="trend">Xu hướng</string>
    <string name="list_comment">Danh sách bình luận</string>
    <string name="configure_notification">Cài đặt nhắc nhở / Thông báo</string>
    <string name="version">Phiên bản</string>
    <string name="language">Ngôn ngữ</string>
    <string name="list_feedback">Danh sách góp ý</string>
    <string name="interactive_document">Văn bản tương tác</string>
    <string name="logout">Đăng xuất</string>
    <string name="account">Tài khoản</string>
    <string name="close">Đóng</string>
    <string name="phone">Số điện thoại</string>
    <string name="position">Chức vụ</string>
    <string name="profile">Hồ sơ cá nhân</string>
    <string name="notification">Thông báo</string>
    <string name="all">Tất cả</string>
    <string name="unread">Chưa đọc</string>
    <string name="nodata">Không có dữ liệu</string>
    <string name="updating_data">Đang cập nhật dữ liệu...</string>
    <string name="username">Tài khoản</string>
    <string name="password">Mật khẩu</string>
    <string name="update_finish">Cập nhật hoàn tất</string>
    <string name="sigin_in">Đăng nhập</string>
    <string name="input_bussiness_email">Nhập email doanh nghiệp đã đăng ký cho bạn</string>
    <string name="require_search">Từ khóa phải có ít nhất 3 ký tự, vui lòng thử lại!</string>
    <string name="error_login">Thông tin đăng nhập không chính xác, vui lòng thử lại!</string>
    <string name="error_document">Văn bản bị lỗi. Vui lòng thử lại sau!</string>
    <string name="signout_notify">Bạn có muốn đăng xuất tài khoản?</string>
    <string name="error_permission">Vui lòng bật quyền để sử dụng ứng dụng!</string>
    <string name="latest_document">Văn bản mới nhất</string>
    <string name="most_viewed_document">Văn bản tôi xem nhiều</string>
    <string name="favorite_document">Văn bản yêu thích</string>
    <string name="recently_docment">Vừa xem</string>
    <string name="force_update">Phiên bản của bạn đã cũ. Vui lòng cập nhật phiên bản mới để có trải nghiệm tốt hơn!
    </string>
    <string name="update">Cập nhật</string>
    <string name="status_delete">Đã xóa</string>
    <string name="status_approved">Đã phê duyệt</string>
    <string name="status_approving">Chờ phê duyệt</string>
    <string name="status_refuse">Bị từ chối</string>
    <string name="document_type">Loại văn bản</string>
    <string name="open_file_error">Bạn không có ứng dụng để mở loại tệp này!</string>
    <string name="dowloading">Đang tải...</string>
    <string name="download_completed">Tải tệp hoàn tất</string>
    <string name="dowload_error">Tải tệp thất bại</string>
    <string name="error_file_chooser">Không thể mở trình chọn tệp</string>
    <string name="something_wrong">Đã có lỗi xảy ra, Vui lòng thử lại.</string>
    <string name="offline_enable">Văn bản hiển thị khi ngoại tuyến</string>
    <string name="offline_disable">Loại bỏ văn bản khỏi Ngoại tuyến</string>
    <string name="text_offline">Văn bản ngoại tuyến</string>
    <string name="th_ng_tin_chung">Thông tin chung</string>
    <string name="m_v_n_b_n">Mã văn bản</string>
    <string name="t_n_v_n_b_n">Tên văn bản</string>
    <string name="t_n_vi_t_t_t">Tên viết tắt</string>
    <string name="tr_ng_th_i">Trạng thái</string>
    <string name="ng_y_ban_h_nh">Ngày ban hành</string>
    <string name="ng_y_hi_u_l_c">Ngày hiệu lực</string>
    <string name="ng_y_h_t_hi_u_l_c">Ngày hết hiệu lực</string>
    <string name="s_ban_h_nh">Số ban hành</string>
    <string name="s_s_a_i">Số sửa đổi</string>
    <string name="s_s_a_i_t_m_th_i">Số sửa đổi tạm thời</string>
    <string name="ng_n_ng">Ngôn ngữ</string>
    <string name="n_v_ch_tr_bi_n_so_n_c_p_1">Đơn vị chủ trì biên soạn cấp 1</string>
    <string name="n_v_ch_tr_bi_n_so_n_c_p_2">Đơn vị chủ trì biên soạn cấp 2</string>
    <string name="n_v_ch_tr_bi_n_so_n_c_p_3">Đơn vị chủ trì biên soạn cấp 3</string>
    <string name="c_c_n_v_ph_n_ph_i">Các đơn vị phân phối</string>
    <string name="c_p_ph_duy_t_t_i_li_u_c_p_1">Cấp phê duyệt tài liệu cấp 1</string>
    <string name="c_p_ph_duy_t_t_i_li_u_c_p_2">Cấp phê duyệt tài liệu cấp 2</string>
    <string name="m_t_n_i_dung_s_a_i">Mô tả nội dung sửa đổi</string>
    <string name="th_ng_tin_ki_m_so_t">Thông tin kiểm soát</string>
    <string name="ng_i_ng">Người đăng</string>
    <string name="ng_i_xem_x_t">Người xem xét</string>
    <string name="ng_i_ph_chu_n">Người phê chuẩn</string>
    <string name="ng_i_ch_p_nh_n">Người chấp nhận</string>
    <string name="ng_i_bi_n_so_n">Người biên soạn</string>
    <string name="ng_i_duy_t">Người duyệt</string>
    <string name="th_ng_tin_qu_n_tr">Thông tin quản trị</string>
    <string name="lo_i_t_i_li_u">Loại tài liệu</string>
    <string name="danh_m_c">Danh mục</string>
    <string name="t_vi_t_t_t">Từ viết tắt</string>
    <string name="t_kh_a">Từ khóa</string>
    <string name="n_i_dung_v_n_b_n">Nội dung văn bản</string>
    <string name="thu_c_t_nh">Thuộc tính</string>
    <string name="ngo_i_tuy_n">Ngoại tuyến</string>
</resources>
