<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".search.SearchResultActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">

        <LinearLayout
            android:id="@+id/lnSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/tvClose"
            android:background="@drawable/bg_border_search"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/icon_search_1"
                app:tint="@color/clGray4" />

            <EditText
                android:id="@+id/edtContent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:inputType="text"
                android:background="@null"
                android:hint="@string/search_hint"
                android:textColor="@color/clGrayDark2"
                android:textSize="@dimen/text14"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/imgDeleteSearch"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/icon_delete_search"
                android:visibility="invisible" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:text="@string/cancel"
            android:textColor="@color/clGrayDark"
            android:textSize="@dimen/text14" />
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        style="?android:attr/progressBarStyleHorizontal"
        android:max="100"
        android:indeterminateTint="@color/clPrimary"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lvItems"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        />

    <TextView
        android:id="@+id/tvNodata"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_connection"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/text16"
        android:textStyle="italic"
        android:visibility="gone"/>

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>