<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".notification.NotificationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/icon_back" />

        <TextView android:text="Cài đặt nhắc nhở / thông báo" android:layout_width="wrap_content"
                  android:layout_height="wrap_content" android:id="@+id/textView2" android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/notification"
            android:textColor="@color/clPrimary"
            android:textSize="@dimen/text20"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bg_oval_graylight"
        android:orientation="horizontal"
        android:padding="2dp"
        android:weightSum="2">

        <TextView
            android:id="@+id/tvAll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_oval_white"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/all"
            android:textColor="@color/clPrimary"
            android:textSize="@dimen/text16"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvUnRead"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/unread"
            android:textColor="@color/black"
            android:textSize="@dimen/text16" />
    </LinearLayout>

    <com.vuthao.VNADCM.base.custom.CustomSwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <include layout="@layout/shimmer_notification" />

                    <include layout="@layout/shimmer_notification" />

                    <include layout="@layout/shimmer_notification" />

                    <include layout="@layout/shimmer_notification" />

                    <include layout="@layout/shimmer_notification" />

                    <include layout="@layout/shimmer_notification" />

                    <include layout="@layout/shimmer_notification" />

                    <include layout="@layout/shimmer_notification" />
                </LinearLayout>
            </com.facebook.shimmer.ShimmerFrameLayout>

            <LinearLayout
                android:id="@+id/lnNodata"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_no_data"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/nodata"
                    android:textColor="@color/clPrimary"
                    android:textSize="@dimen/text16"
                    android:layout_marginTop="10dp"
                    android:textStyle="italic" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/lvItems"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp" />
        </LinearLayout>
    </com.vuthao.VNADCM.base.custom.CustomSwipeRefreshLayout>

</LinearLayout>
