<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerlayout_ActivityMain_Content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.TabActivity">

    <FrameLayout
        android:id="@+id/frMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/clTransparent"
        app:layout_constraintBottom_toTopOf="@+id/tab_ActivityMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@drawable/bg_line_top_shadow"
        app:layout_constraintBottom_toTopOf="@id/tab_ActivityMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/tab_ActivityMain"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/clPrimary"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/tab_ActivityMain_Home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_ActivityMain_Home"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/icon_home" />

            <TextView
                android:id="@+id/tv_ActivityMain_Home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_home"
                android:textSize="@dimen/text12"
                android:layout_marginTop="6dp"
                android:textColor="@color/clYellow"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_ActivityMain_Category"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_ActivityMain_Category"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/icon_category" />

            <TextView
                android:id="@+id/tv_ActivityMain_Category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_category"
                android:textSize="@dimen/text12"
                android:textColor="@color/white"
                android:layout_marginTop="6dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_ActivityMain_Search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_ActivityMain_Search"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/icon_search" />

            <TextView
                android:id="@+id/tv_ActivityMain_Search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_search"
                android:textSize="@dimen/text12"
                android:textColor="@color/white"
                android:layout_marginTop="6dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_ActivityMain_Favorite"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_ActivityMain_Favorite"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/icon_favorite" />

            <TextView
                android:id="@+id/tv_ActivityMain_Favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_favorite"
                android:textSize="@dimen/text12"
                android:textColor="@color/white"
                android:layout_marginTop="6dp"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>