<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".search.SearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgAvatar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/icon_avatar64" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/tab_search"
                android:textColor="@color/clPrimary"
                android:textSize="@dimen/text20"
                android:textStyle="bold" />
        </LinearLayout>

        <com.vuthao.VNADCM.base.custom.CustomSwipeRefreshLayout
            android:id="@+id/swipeRefresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background"
                android:orientation="vertical"
                android:padding="20dp">

                <LinearLayout
                    android:id="@+id/lnSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_border_search"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/icon_search_1"
                        app:tint="@color/clGray4" />

                    <EditText
                        android:id="@+id/edtContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:background="@null"
                        android:hint="@string/search_hint"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColor="@color/clGrayDark2"
                        android:textSize="@dimen/text14"
                        android:textStyle="italic" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lnContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/trend"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text18" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/lvItems"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp" />
                </LinearLayout>

            </LinearLayout>

        </com.vuthao.VNADCM.base.custom.CustomSwipeRefreshLayout>

    </LinearLayout>

</FrameLayout>