<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    android:orientation="vertical"
    tools:context=".login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="35dp"
        android:paddingEnd="35dp">

        <LinearLayout
            android:id="@+id/lnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/lnUsername"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="18dp"
                android:background="@drawable/bg_border_login">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/icon_username" />

                <EditText
                    android:id="@+id/edtUsername"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textSize="@dimen/text14"
                    android:textStyle="italic" />

                <ImageView
                    android:id="@+id/imgDeleteUsername"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:padding="2dp"
                    android:visibility="invisible"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/icon_delete_red"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnPassword"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_border_login"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/icon_password" />

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    android:background="@null"
                    android:ellipsize="end"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="255"
                    android:maxLines="1"
                    android:text=""
                    android:layout_marginEnd="5dp"
                    android:textSize="@dimen/text14"
                    android:textStyle="italic" />

                <ImageView
                    android:id="@+id/imgShowPassword"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/icon_show_password"/>
            </LinearLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                style="@style/styleButtonLoginPositiveBorder"
                android:text="@string/sigin_in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text16" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tvNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="Đang cập nhật dữ liệu..."
        android:textColor="@color/clBlack"
        android:textSize="@dimen/text16"
        android:visibility="invisible" />
</RelativeLayout>